Update stylesheets and themes

--- a/src/stylesheets/html.css
+++ b/src/stylesheets/html.css
@@ -1,5 +1,12 @@
+@import url("https://fonts.xz.style/serve/inter.css");
+
 html {
   scroll-behavior: smooth;
+}
+
+body {
+  -webkit-font-smoothing: auto;
+  -moz-osx-font-smoothing: auto;
 }
 
 #nprogress {
